log.txt
src/MvrRobotConfigPacketReader.cpp: In member function ‘std::string MvrRobotConfigPacketReader::buildString() const’:
src/MvrRobotConfigPacketReader.cpp:304:7: warning: unused variable ‘i’ [-Wunused-variable]
   int i, j;
       ^
src/MvrRobotConnector.cpp: In constructor ‘MvrRobotConnector::MvrRobotConnector(MvrArgumentParser*, MvrRobot*, bool, bool)’:
src/MvrRobotConnector.cpp:53:3: error: ‘addParseArgsCB’ is not a member of ‘Mvria’
   Mvria::addParseArgsCB(&myParseArgsCB, 75);
   ^
src/MvrRobotConnector.cpp:73:95: error: expected primary-expression before ‘,’ token
     mySonarConnector   = new MvrSonarConnector(myParser, myRobot, this, true,/*autoParseArgs*/, MvrLog::Verbose);
                                                                                               ^
src/MvrRobotConnector.cpp:73:112: error: invalid use of incomplete type ‘class MvrSonarConnector’
     mySonarConnector   = new MvrSonarConnector(myParser, myRobot, this, true,/*autoParseArgs*/, MvrLog::Verbose);
                                                                                                                ^
In file included from include/MvrSonarConnector.h:19:0,
                 from src/MvrRobotConnector.cpp:15:
include/MvrRobotConnector.h:21:7: error: forward declaration of ‘class MvrSonarConnector’
 class MvrSonarConnector;
       ^
src/MvrRobotConnector.cpp: In destructor ‘MvrRobotConnector::~MvrRobotConnector()’:
src/MvrRobotConnector.cpp:82:12: warning: possible problem detected in invocation of delete operator: [enabled by default]
     delete mySonarConnector;
            ^
src/MvrRobotConnector.cpp:82:12: warning: invalid use of incomplete type ‘class MvrSonarConnector’ [enabled by default]
In file included from include/MvrSonarConnector.h:19:0,
                 from src/MvrRobotConnector.cpp:15:
include/MvrRobotConnector.h:21:7: warning: forward declaration of ‘class MvrSonarConnector’ [enabled by default]
 class MvrSonarConnector;
       ^
src/MvrRobotConnector.cpp:82:12: note: neither the destructor nor the class-specific operator delete will be called, even if they are declared when the class is defined
     delete mySonarConnector;
            ^
src/MvrRobotConnector.cpp: At global scope:
src/MvrRobotConnector.cpp:140:16: error: ‘ArgRobotConnector’ has not been declared
 MVREXPORT bool ArgRobotConnector::parseArgs(MvrArgumentParser *parser)
                ^
src/MvrRobotConnector.cpp: In function ‘bool parseArgs(MvrArgumentParser*)’:
src/MvrRobotConnector.cpp:142:3: error: ‘myHaveParsedArgs’ was not declared in this scope
   myHaveParsedArgs = true;
   ^
src/MvrRobotConnector.cpp:148:5: error: ‘myRemoteIsSim’ was not declared in this scope
     myRemoteIsSim = true;
     ^
src/MvrRobotConnector.cpp:150:5: error: ‘myRemoteIsNotSim’ was not declared in this scope
     myRemoteIsNotSim = true;
     ^
src/MvrRobotConnector.cpp:153:5: error: ‘myRobotLogPacketsReceived’ was not declared in this scope
     myRobotLogPacketsReceived = true;
     ^
src/MvrRobotConnector.cpp:156:5: error: ‘myRobotLogPacketsSent’ was not declared in this scope
     myRobotLogPacketsSent = true;
     ^
src/MvrRobotConnector.cpp:159:5: error: ‘myRobotLogMovementReceived’ was not declared in this scope
     myRobotLogMovementReceived = true;
     ^
src/MvrRobotConnector.cpp:162:5: error: ‘myRobotLogMovementSent’ was not declared in this scope
     myRobotLogMovementSent = true;
     ^
src/MvrRobotConnector.cpp:165:5: error: ‘myRobotLogVelocitiesReceived’ was not declared in this scope
     myRobotLogVelocitiesReceived = true;
     ^
src/MvrRobotConnector.cpp:168:5: error: ‘myRobotLogActions’ was not declared in this scope
     myRobotLogActions = true;
     ^
src/MvrRobotConnector.cpp:170:61: error: ‘myRemoteHost’ was not declared in this scope
   if (!parser->checkParameterArgumentString("-remoteHost", &myRemoteHost) || 
                                                             ^
src/MvrRobotConnector.cpp:172:60: error: ‘myRobotPort’ was not declared in this scope
       !parser->checkParameterArgumentString("-robotPort", &myRobotPort) ||
                                                            ^
src/MvrRobotConnector.cpp:174:70: error: ‘myRemoteRobotTcpPort’ was not declared in this scope
       !parser->checkParameterArgumentInteger("-remoteRobotTcpPort", &myRemoteRobotTcpPort) ||
                                                                      ^
src/MvrRobotConnector.cpp:176:61: error: ‘myRobotBaud’ was not declared in this scope
       !parser->checkParameterArgumentInteger("-robotBaud", &myRobotBaud) || 
                                                             ^
src/MvrRobotConnector.cpp: At global scope:
src/MvrRobotConnector.cpp:188:16: error: ‘ArgRobotConnector’ has not been declared
 MVREXPORT void ArgRobotConnector::logOptions(void) const
                ^
src/MvrRobotConnector.cpp:188:52: error: non-member function ‘void logOptions()’ cannot have cv-qualifier
 MVREXPORT void ArgRobotConnector::logOptions(void) const
                                                    ^
src/MvrRobotConnector.cpp: In member function ‘bool MvrRobotConnector::disconnectAll()’:
src/MvrRobotConnector.cpp:362:30: error: invalid use of incomplete type ‘class MvrSonarConnector’
     r = r && mySonarConnector->disconnectSonars();
                              ^
In file included from include/MvrSonarConnector.h:19:0,
                 from src/MvrRobotConnector.cpp:15:
include/MvrRobotConnector.h:21:7: error: forward declaration of ‘class MvrSonarConnector’
 class MvrSonarConnector;
       ^
src/MvrRobotConnector.cpp: In member function ‘bool MvrRobotConnector::connectRobot()’:
src/MvrRobotConnector.cpp:402:29: error: invalid use of incomplete type ‘class MvrSonarConnector’
         if(!mySonarConnector->connectSonars())
                             ^
In file included from include/MvrSonarConnector.h:19:0,
                 from src/MvrRobotConnector.cpp:15:
include/MvrRobotConnector.h:21:7: error: forward declaration of ‘class MvrSonarConnector’
 class MvrSonarConnector;
       ^
make: *** [obj/MvrRobotConnector.o] 错误 1
